# flutter_face_recognition

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffi_opencv_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: detection_page.dart  detection_page_2.dart  detections_layer.dart  logger.dart  main.dart
ios/: ffi_opencv.podspec
ios/Classes/: definitions.hpp  ffi_opencv.cpp  ffi_opencv.hpp
ios/Classes/src/: face_detctor.cpp  face_detctor.hpp  logger.cpp  logger.hpp
lib/: c_responses.dart  ffi_opencv.dart  ffi_opencv_bindings.dart  ffi_opencv_bindings_generated.dart
lib/data/: face_detector_request.dart  tread_data.dart
lib/detctor/: index.dart  index_isolate.dart  isolate_requests.dart  isolate_responses.dart
src/: CMakeLists.txt  definitions.hpp  ffi_opencv.cpp  ffi_opencv.hpp  string_struct.hpp
src/old/: face_detector_old.cpp
src/src/: face_detctor.cpp  face_detctor.hpp
